# walkie-talkie

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
common/: choices.py  permissions.py  serializers.py
config/: asgi.py  celery.py  settings.py  test_settings.py  urls.py
providers/: base.py  elevenlabs.py  groq.py  mock.py  sarvam.py  services.py
providers/tests/: test_elevenlabs.py  test_groq.py  test_sarvam.py
realtime/: consumers.py  middleware.py  presence.py  routing.py  serializers.py  services.py
realtime/tests/: test_websocket.py
rooms/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
rooms/management/commands/: seed_demo.py
rooms/migrations/: 0001_initial.py
rooms/tests/: test_models.py  test_room_reference_api.py
translations/: admin.py  models.py  serializers.py  services.py  urls.py
translations/migrations/: 0001_initial.py
translations/tests/: test_models.py  test_services.py
users/: admin.py  authentication.py  models.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_groups_and_more.py
users/tests/: test_api.py
utterances/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
utterances/migrations/: 0001_initial.py
utterances/tests/: test_api_pipeline.py  test_services.py
